# goboscript.discord

./: .gitignore  pyproject.toml  schema.yml  syntax_guide.txt
.github/: copilot-instructions.md
app/: __main__.py  _logging.py  bot.py  cli.py  documentation.py  embedding.py  markdown_chunker.py  misc.py  rag.py  sb2gs.py  scratch.py  services.py
gbot/: __init__.py  __main__.py  bot.py  documentation.py  embedding.py  markdown_chunker.py  rag.py  sb2gs.py
prompts/: needs_syntax_guide.txt  no_syntax_guide_fix.txt  prompt.txt  rag_code_system_prompt.txt  rag_system_prompt.txt  request_type_prompt.txt
